--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -26,7 +26,7 @@ services:
     container_name: rentx_api
     command: yarn dev:server
     ports:
-      - 3334:3334
+      - "3334:3334"
 
   rentx_mongo:
     image: bitnami/mongodb:latest
@@ -51,6 +51,8 @@ services:
     environment:
       - ALLOW_EMPTY_PASSWORD=no
       - REDIS_PASSWORD=${REDIS_PASS}
+    ports:
+      - "6379:6379"
     volumes:
       - /tmp/redis:/bitnami/redis/data
     networks:
