--- a/package.json
+++ b/package.json
@@ -12,14 +12,18 @@
       "start": "ts-node src/index.ts"
    },
    "dependencies": {
+      "cors": "^2.8.5",
       "dotenv": "^8.2.0",
       "express": "^4.17.1",
       "handlebars": "^4.7.7",
+      "ioredis": "^4.26.0",
+      "mongodb": "^3.6.6",
       "mongoose": "^5.12.3",
       "multer": "^1.4.2",
       "mysql": "^2.14.1",
       "nodemailer": "^6.5.0",
       "pg": "^8.6.0",
+      "redis": "^3.1.1",
       "reflect-metadata": "^0.1.10",
       "swagger-jsdoc": "^7.0.0-rc.6",
       "swagger-ui-express": "^4.1.6",
@@ -52,6 +56,6 @@
       "ts-node": "3.3.0",
       "ts-node-dev": "^1.0.0-pre.44",
       "tsconfig-paths": "^3.9.0",
-      "typescript": "3.3.3333"
+      "typescript": "^4.2.4"
    }
 }
