adicionando novas ordenaçoes nos imports

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -62,7 +62,9 @@
         "newlinesBetween": "always",
         "groups": [
           "module",
-          "/^@shared/",
+          "/^@modules/",
+          "/^@/useCases",
+          "/^@/repositories",
           "/^@/",
           [
             "parent",
