--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -63,8 +63,7 @@
         "groups": [
           "module",
           "/^@modules/",
-          "/^@/useCases",
-          "/^@/repositories",
+          "/^@/shared",
           "/^@/",
           [
             "parent",
