--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "@types/multer": "^1.4.5",
     "@types/node": "^8.0.29",
     "@types/nodemailer": "^6.4.1",
+    "@types/supertest": "^2.0.11",
     "@types/uuid": "^8.3.0",
     "@typescript-eslint/eslint-plugin": "^4.17.0",
     "@typescript-eslint/parser": "^4.17.0",
@@ -57,6 +58,7 @@
     "jest": "^26.6.3",
     "jest-module-name-mapper": "^0.1.5",
     "prettier": "^2.2.1",
+    "supertest": "^6.1.3",
     "ts-jest": "^26.5.5",
     "ts-node": "3.3.0",
     "ts-node-dev": "^1.0.0-pre.44",
