--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -30,6 +30,7 @@
     "no-useless-constructor": "off",
     "no-empty-function": "off",
     "lines-between-class-members": "off",
+    "eslint-disable-next-line": "prettier/prettier",
     "@typescript-eslint/no-unused-vars": [
       "error",
       {
@@ -62,8 +63,7 @@
         "newlinesBetween": "always",
         "groups": [
           "module",
-          "/^@modules/",
-          "/^@/shared",
+          "/^@shared/",
           "/^@/",
           [
             "parent",
@@ -88,7 +88,7 @@
         "moduleDirectory": [
           "node_modules",
           "src/"
-        ],
+        ]
       },
       "typescript": {}
     }
