--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "express-async-errors": "^3.1.1",
     "handlebars": "^4.7.7",
     "ioredis": "^4.26.0",
+    "jsonwebtoken": "^8.5.1",
     "mongodb": "^3.6.6",
     "mongoose": "^5.12.3",
     "multer": "^1.4.2",
