--- a/package.json
+++ b/package.json
@@ -12,8 +12,10 @@
     "start": "ts-node src/index.ts"
   },
   "dependencies": {
+    "@sentry/node": "^6.2.5",
     "bcryptjs": "^2.4.3",
     "celebrate": "^14.0.0",
+    "class-transformer": "^0.4.0",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
@@ -29,6 +31,7 @@
     "pg": "^8.6.0",
     "redis": "^3.1.1",
     "reflect-metadata": "^0.1.10",
+    "sentry": "^0.1.2",
     "swagger-jsdoc": "^7.0.0-rc.6",
     "swagger-ui-express": "^4.1.6",
     "tsyringe": "^4.4.0",
@@ -40,8 +43,10 @@
   "devDependencies": {
     "@babel/preset-env": "^7.13.15",
     "@types/bcryptjs": "^2.4.2",
+    "@types/cors": "^2.8.10",
     "@types/express": "^4.17.11",
     "@types/jest": "^26.0.22",
+    "@types/jsonwebtoken": "^8.5.1",
     "@types/mocha": "^8.2.1",
     "@types/multer": "^1.4.5",
     "@types/node": "^8.0.29",
