--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "start": "ts-node src/index.ts"
   },
   "dependencies": {
-    "@sentry/node": "^6.2.5",
+    "@sentry/node": "^6.3.0",
+    "@sentry/tracing": "^6.3.0",
     "aws-sdk": "^2.889.0",
     "bcryptjs": "^2.4.3",
     "celebrate": "^14.0.0",
