Adicionando refresh token

--- a/.env.exemple
+++ b/.env.exemple
@@ -1,5 +1,8 @@
 APP_SECRET=bd38296a442627b2cabbee1b3adc88af
 
+SECRET_TOKEN=fdd84a79a8bffb7fe17f636cccb5f93c
+REFRESH_SECRET_TOKEN=f74db71438f714d6443663c21e50e7b9
+
 APP_API_URL=http://192.168.100.16:3334
 APP_WEB_URL=http://localhost:3000
 
