--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "@types/multer": "^1.4.5",
     "@types/node": "^8.0.29",
     "@types/nodemailer": "^6.4.1",
+    "@types/swagger-ui-express": "^4.1.2",
     "@types/uuid": "^8.3.0",
     "@typescript-eslint/eslint-plugin": "^4.17.0",
     "@typescript-eslint/parser": "^4.17.0",
