--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -21,7 +21,6 @@
     "eslint-plugin-import-helpers"
   ],
   "rules": {
-    "prettier/prettier": "error",
     "camelcase": "off",
     "class-methods-use-this": "off",
     "import/prefer-default-export": "off",
@@ -30,7 +29,7 @@
     "no-useless-constructor": "off",
     "no-empty-function": "off",
     "lines-between-class-members": "off",
-    "eslint-disable-next-line": "prettier/prettier",
+    "eslint-disable-next-line": "off",
     "@typescript-eslint/no-unused-vars": [
       "error",
       {
