--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "@sentry/node": "^6.3.0",
     "@sentry/tracing": "^6.3.0",
+    "@types/ioredis": "^4.26.0",
     "aws-sdk": "^2.889.0",
     "bcryptjs": "^2.4.3",
     "celebrate": "^14.0.0",
@@ -26,6 +27,7 @@
     "handlebars": "^4.7.7",
     "ioredis": "^4.26.0",
     "jsonwebtoken": "^8.5.1",
+    "mime": "^2.4.5",
     "mongodb": "^3.6.6",
     "mongoose": "^5.12.3",
     "multer": "^1.4.2",
